Fix extremely triggering breaks in PDFs

--- a/resources/content-description.sass
+++ b/resources/content-description.sass
@@ -63,6 +63,7 @@
     padding: 0
   pre, code, kbd, samp
     color: #000
+    page-break-inside: avoid
     font-family: monospace, monospace
     _font-family: 'courier new', monospace
     font-size: 0.98em
